nlw/share/skin/s3/css/styles.css
/* ... */
	
div#mainNav div#workSpaceLink a:hover {	
	color: #a6e4fc;
	text-decoration: none;
}

/* mainNav End */

/* contentWrap Start */
div#st-display-mode-container {
	width: 100%;
	margin-top: 4px;
}	

/* contentWrap End */

/* tabs Start */
	
div#st-display-mode-container div#tabs {
	height: 41px;
	background: url(../images/tabTile.png) repeat-x top left;
}	

div.tableTabs {
	height: 41px;
	background: url(../images/tabsLeft.png) no-repeat top left;
	float: left;
}

div.tableTabs ul {
	float: left;
	margin-left: 2px;
}

div.tableTabs ul li {
	float: left;
}

div.tableTabs ul li.selected {
	background: url(../images/tabOnRight.png) no-repeat bottom right;
	margin-right: -2px;
}

div.tableTabs ul li a {
	float: left;
	line-height: 36px;
	display: block;
	padding: 0 14px 0 16px;
	background: url(../images/tabDivider.png) no-repeat center right;
}


div.tableTabs ul li.selected a {
	background: url(../images/tabOnLeft.png) no-repeat bottom left;
	margin-left: -2px;
	padding: 0 14px 0 14px;
}

div.tableTabs ul li.selected a.first {
	background: url(../images/tabOnLeftFirst.png) no-repeat bottom left;
}

div.tableFilter {
	height: 41px;
	background: url(../images/tabsRight.png) no-repeat top right;
	float: right;
	width: 30%;
}

div.tableFilter label {
	float: left;
	line-height: 36px;
	margin-right: 10px;
}

div.tableFilter ul {
	float: left;
	margin-right: 5px;
}

div.tableFilter ul li {
	float: left;
	padding:0;
	
}

div.tableFilter ul li.selected {
	background: url(../images/filterOnLeft.png) no-repeat bottom left;
	margin-left: -2px;
}

div.tableFilter ul li a {
	float: left;
	line-height: 36px;
	display: block; 
	padding: 0 14px 0 14px;
	background: url(../images/dottedDivider.png) no-repeat center right;
}

div.tableFilter ul li a.last {
	background: none;
}

div.tableFilter ul li.selected a {
	background: url(../images/filterOnRight.png) no-repeat bottom right;
	margin-right: -2px;
}

div.tableFilter ul li.selected a.first {
	background: url(../images/filterOnRightLast.png) no-repeat bottom right;
}
	
/* tabs End */

/* controls Start */ 

div#controls {
	height: 41px;
	background: url(../images/controlsTile.png) repeat-x top left;
}

body#contentPage div#controls,body#settingsPage div#controls {
	height: 44px;
	background: url(../images/contentControlsTile.png) repeat-x top left;
}

body#dashboard div#controls,body#blog div#controls {
	height: 83px;
	background: url(../images/dashControlsTile.png) repeat-x top left;
}

div#controls div#st-editing-tools-edit {
	background: url(../images/controlsLeft.png) no-repeat top left;
	float: left;
	width: 60%;
	height: 41px;
}


div#controls div#st-editing-tools-edit {
       width: auto !important;
}

body#contentPage div#controls div#st-editing-tools-edit,body#settingsPage div#controls div#st-editing-tools-edit {
	background: url(../images/contentControlsLeft.png) no-repeat top left;
	height: 44px;
	padding-left: 8px;
}

div#controls div#st-editing-tools-edit h2 {
	font-size: 14px;
	color: #333;
	line-height: 44px;
	padding-left: 10px;
}

body#listPage div#controls div#st-editing-tools-edit {
	padding-left: 8px;
}

body#dashboard div#controls div#st-editing-tools-edit {
	background: url(../images/dashControlsLeft.png) no-repeat top left;
	height: 83px;
	width: 80%;
}

body#blog div#controls div#st-editing-tools-edit {
	background: url(../images/dashControlsLeft.png) no-repeat top left;
	height: 83px;
	width: 50%;
}


div#controls div#st-editing-tools-edit ul {
	float: left;
	height: 41px;
}

ul.buttonRight {
	background: url(../images/controlsRightDivider.png) no-repeat 10px 10px;
	padding-left: 10px;
}

div#controls div#st-editing-tools-edit ul li {
	float: left;
	line-height: 41px;
}

body#dashboard div#controls div#st-editing-tools-edit h1,body#blog div#controls div#st-editing-tools-edit h1 {
	font-size: 20px;
	margin:21px 0 0 21px;}
	
body#dashboard div#controls div#st-editing-tools-edit ul#quickLinks,body#blog div#controls div#st-editing-tools-edit ul#quickLinks {
	margin: 15px 0 0 12px;
}	


body#dashboard div#mainWrap div#st-display-mode-container div#controls div#st-editing-tools-edit ul#quickLinks,body#blog div#mainWrap div#st-display-mode-container div#controls div#st-editing-tools-edit ul#quickLinks {
       height: auto;
}

body#dashboard div#controls div#st-editing-tools-edit ul#quickLinks li,body#blog div#controls div#st-editing-tools-edit ul#quickLinks li {
	line-height: normal;
	padding: 0 10px 0 10px;
	border-right: #8b8b8b 1px dotted;
}	


body#dashboard div#controls div#st-editing-tools-edit ul#quickLinks li.noBorder,body#blog div#controls div#st-editing-tools-edit ul#quickLinks li.noBorder {
	border-right: none;
}

body#dashboard div#controls div#st-editing-tools-edit ul#quickLinks li a,body#blog div#controls div#st-editing-tools-edit ul#quickLinks li a {
	display: inline;
	line-height: normal;
	position: static;
	margin: 0;
}	


body#dashboard div#controls div#st-editing-tools-edit ul#quickLinks li.quickTitle,body#blog div#controls div#st-editing-tools-edit ul#quickLinks li.quickTitle {
	border: none;
	padding: 0 0 0 10px;
}

body#dashboard div#controls div#st-editing-tools-edit ul#quickLinks li img,body#blog div#controls div#st-editing-tools-edit ul#quickLinks li img {
	float: left;
	margin-right: 5px;
}

body#contentPage div#controls div#st-editing-tools-edit ul li,body#settingsPage div#controls div#st-editing-tools-edit ul li {
	line-height: 44px;
}

div#controls div#st-editing-tools-edit ul li a {
	float: left;
	position: relative;
	top: 10px;
	margin-left: 10px;
}

body#contentPage div#st-editing-tools-edit ul li a,body#settingsPage div#st-editing-tools-edit ul li a {
	top: 13px;
}

ul li a.newPageButton {
	display: block;
	width: 96px;
	height: 22px;
	background: url(../images/newPageButton.png) no-repeat;
	background-position: top left;
	text-indent: -9999px;
}
/* ... */

